# gbOPP

./: .gitignore
Blackjack/: CMakeLists.txt
Blackjack/src/: box.h  card.cpp  card.h  dealer.h  deck.cpp  deck.h  game.cpp  game.h  genericplayer.cpp  genericplayer.h  hand.cpp  hand.h  house.cpp  house.h  main.cpp  player.cpp  player.h
Lesson1/: CMakeLists.txt
Lesson1/include/: Lesson1.h  power.h  rgba.h  stack.h
Lesson1/src/: main.cpp  power.cpp  rgba.cpp  stack.cpp
Lesson2/: CMakeLists.txt
Lesson2/Blackjack/src/: main.cpp
Lesson2/task1/: CMakeLists.txt
Lesson2/task1/src/: main.cpp  person.cpp  person.h  student.cpp  student.h
Lesson2/task2/src/: apple.cpp  apple.h  banana.cpp  banana.h  fruit.cpp  fruit.h  grannysmith.cpp  grannysmith.h  main.cpp
Lesson2/task3/src/: array.cpp  array.h  main.cpp  money.cpp  money.h
Lesson3/: CMakeLists.txt
Lesson3/task1/src/: circle.cpp  circle.h  figure.h  main.cpp  parallelogram.cpp  parallelogram.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  square.cpp  square.h
Lesson3/task2/: CMakeLists.txt
Lesson3/task2/src/: bus.cpp  bus.h  car.cpp  car.h  main.cpp  minivan.cpp  minivan.h  pasengercar.cpp  pasengercar.h
Lesson3/task3/: CMakeLists.txt
Lesson3/task3/src/: fraction.cpp  fraction.h  main.cpp  main.cpp.autosave
Lesson4/: CMakeLists.txt
Lesson4/task4/: CMakeLists.txt
Lesson5/: CMakeLists.txt
Lesson5/src/: main.cpp
Lesson6/: CMakeLists.txt
Lesson6/src/: main.cpp
Lesson7/: CMakeLists.txt
Lesson7/src/: main.cpp
Lesson8/: CMakeLists.txt
Lesson8/src/: main.cpp
(+5 files in other folders)
